--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Tavis Chen</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://media-exp1.licdn.com/dms/image/C5603AQHZK1_gRr8UOA/profile-displayphoto-shrink_800_800/0/1625429196898?e=1642636800&v=beta&t=zhB0wKXxW88M9XxEkZS25XlJBpK0CxDhPofgMmMXaWU"/>
 </body>
  
 </html>
