--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
  
 <body>
-  <h1>Tavis Chen</h1>
-  <p>Welcome to my website!</p>
   <a href="https://imgur.com/58ImHN5"><img src="https://i.imgur.com/58ImHN5.jpg"/></a>
+  <h1>Tavis Chen</h1>
+  <p></p>
+  Hi! My name is Tavis and I am a first year student at studying chemical engineering at UC Berkeley. I'm curious about all things healthcare and biotechnology. On my free time, I like to run or challenge the New York Times crossword puzzle.
 </body>
  
 </html>
