--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <html>
- 
+
+<style>
+p {
+  color: white;
+  text-align: center;
+  } 
+body {
+  background-color: lightblue;
+ }
+h1 {
+  color: white;
+  text-align: center;
+  } 
+</style>
+
+
+<p>Hello World!</p>
+<p>These paragraphs are styled with CSS.</p>
+
+</body>
+</html>
 <body>
   <a href="https://imgur.com/58ImHN5"><img src="https://i.imgur.com/58ImHN5.jpg"/></a>
   <h1>Tavis Chen</h1>
