--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <html>
 
 <style>
-p {
-  color: white;
-  text-align: center;
-  } 
 body {
   background-color: black;
  }
+p {
+  color: white;
+  text-align: center;
+  font-family: "Monaco", "Courier New", monospace
+  } 
 h1 {
   color: white;
   text-align: center;
+  font-family: "Monaco", "Courier New", monospace
   } 
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 </style>
-
-
-<p>Hello World!</p>
-<p>These paragraphs are styled with CSS.</p>
-
 </body>
-</html>
-<body>
-  <a href="https://imgur.com/58ImHN5"><img src="https://i.imgur.com/58ImHN5.jpg"/></a>
+  <a img src="https://i.imgur.com/58ImHN5.jpg" a>
   <h1>Tavis Chen</h1>
   <p></p>
   Hi! My name is Tavis and I am a first year student at studying chemical engineering at UC Berkeley. I'm curious about all things healthcare and biotechnology. On my free time, I like to run or challenge the New York Times crossword puzzle.
