--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ img {
 }
 </style>
 </body>
-  <a img src="https://i.imgur.com/58ImHN5.jpg" a>
+  <a href="https://imgur.com/58ImHN5"><img src="https://i.imgur.com/58ImHN5.jpg"/></a>
   <h1>Tavis Chen</h1>
     <h2>
       Hi! My name is Tavis and I am a first year student at studying chemical engineering at UC Berkeley. I'm curious about all things healthcare and biotechnology. On my free time, I like to run or challenge the New York Times crossword puzzle.
