--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@ h1 {
   color: white;
   text-align: center;
   font-family: "Monaco", "Courier New", monospace
+  font-size: 50px;
   } 
 h2 {
   color: white;
   text-align: center;
   font-family: "Monaco", "Courier New", monospace
+  font-size: 30px;
   } 
 
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 350px;
 }
 </style>
 </body>
