--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 
 <style>
 body {
-  background-color: black;
+  background-color: 40302C;
  }
 h1 {
-  color: white;
+  color: EAB13F;
   text-align: center;
   font-family: "Monaco", "Courier New", monospace
   font-size: 50px;
   } 
 h2 {
-  color: white;
+  color: EAB13F;
   text-align: center;
   font-family: "Monaco", "Courier New", monospace
   font-size: 30px;
