--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <style>
 body {
-  background-color: 40302C;
+  background-color: 342D2D;
  }
 h1 {
   color: EAB13F;
@@ -21,7 +21,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 350px;
+  max-width: 250x;
 }
 </style>
 </body>
