--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 body {
   background-color: 342D2D;
  }
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-right: 25px;
+  margin-left: 25px;
 h1 {
   color: EAB13F;
   text-align: center;
