--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ body {
   margin-bottom: 50px;
   margin-right: 25px;
   margin-left: 25px;
-h1 {
+h {
   color: EAB13F;
   text-align: center;
   font-family: "Monaco", "Courier New", monospace
   font-size: 40px;
   } 
-h2 {
+p {
   color: EAB13F;
   text-align: center;
   font-family: "Monaco", "Courier New", monospace
@@ -30,10 +30,10 @@ img {
 </style>
 </body>
   <a href="https://imgur.com/58ImHN5"><img src="https://i.imgur.com/58ImHN5.jpg"/></a>
-  <h1>Tavis Chen</h1>
-    <h2>
+  <h>Tavis Chen</h>
+    <p>
       Hi! My name is Tavis and I am a first year student studying chemical engineering at UC Berkeley. I'm curious about all things healthcare and biotechnology. On my free time, I like to run or challenge the New York Times crossword puzzle.
-    </h2>
+    <p>
 </body>
  
 </html>
