--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@ img {
 }
 </style>
 </body>
-  <a href="https://imgur.com/58ImHN5"><img src="https://i.imgur.com/58ImHN5.jpg"/></a>
-  <h>Tavis Chen</h>
-    <p>
+  <img src="https://i.imgur.com/58ImHN5.jpg "width="200" height="200">
+  <h>
+    Tavis Chen
+  </h>
+   <p>
       Hi! My name is Tavis and I am a first year student studying chemical engineering at UC Berkeley. I'm curious about all things healthcare and biotechnology. On my free time, I like to run or challenge the New York Times crossword puzzle.
-    <p>
+   <p>
 </body>
  
 </html>
