--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <h2>Contact me</h2>
                     <p>Like what you see? Let's chat! You can reach me on:</p>
                     <ul>
-                        <a href="https://linkedin.com/in/tavischen/">LinkedIn</a>
+                        <a href="https://linkedin.com/in/tavischen/">LinkedIn</a><br>
                         <a href="https://www.instagram.com/tavischen/">Instagram</a>
                     </ul>
                     <p>Or, you can <a href="mailto:tavischen@berkeley.edu">send me an email!</a></p>
