--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <header>
-            <img src="https://i.imgur.com/76EJBkv.png" class="profile-img">
+            <img src="https://i.imgur.com/eX94P7f.png" class="profile-img">
             <nav>
                 <ul class="navigation">
                     <li><a href="#hero" class="nav-link">Home</a></li>
@@ -21,7 +21,7 @@
         <main>
             <section id="hero">
                 <div class="section-inner">
-                    <img src="https://i.imgur.com/58ImHN5.jpg" class="profile-img">
+                    <img src="https://i.imgur.com/76EJBkv.png" class="profile-img">
                     <h1>Tavis Chen</h1>
                 </div>
             </section>
