--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                         <a href="https://vcg.berkeley.edu/" target="_blank" class="project-link">Check it Out</a>
                                     </div>
                             <div class="project-container project-card">
-                                <img src="https://imgur.com/ShzZWC3" alt="polygence" loading="lazy"class="project-pic"/>
+                                <img src="https://i.imgur.com/ShzZWC3.png" alt="polygence" loading="lazy"class="project-pic"/>
                                     <h3 class="project-title">Polygence Research Mentorship</h3>
                                         <p class="project-details">
                                             Polygence is an virtual research program that connects students
