--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main>
             <section id="hero">
                 <div class="section-inner">
-                    <img src="https://media-exp1.licdn.com/dms/image/C5603AQFLGmNPzE5i-w/profile-displayphoto-shrink_400_400/0/1653691575578?e=1663804800&v=beta&t=ZXBjUkk6NvkryrKBudjDWHZNeXq4Isx6eGjKRLvAdQc" class="profile-img">
+                    <img src="https://imgur.com/ef511eb4-61c5-4372-af63-531cdfcdc9fc" class="profile-img">
                     <h1>Tavis Chen</h1>
                 </div>
             </section>
@@ -39,7 +39,7 @@
                     <div class="container">
                         <div class="projects-container">
                             <div class="project-container project-card">
-                                <img src="https://media-exp1.licdn.com/dms/image/C4E0BAQHzIuDBQtIAcw/company-logo_200_200/0/1519886003265?e=1666224000&v=beta&t=SlvcKYDv6Vn_bEDDwyy1h2_5-4VvFmucx_KY0QoVk48" alt="valley" loading="lazy" class="project-pic"/>
+                                <img src="https://i.imgur.com/R8pauAu.jpg" alt="valley" loading="lazy" class="project-pic"/>
                                     <h3 class="project-title">Valley Consulting Group</h3>
                                         <p class="project-details">
                                            Strategy consulting. Past clients include Walmart and scholarHub.
