--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <header>
-            <img src="https://i.imgur.com/eX94P7f.png" class="profile-img">
+            <img src="https://imgur.com/K0TNXwa" class="profile-img">
             <nav>
                 <ul class="navigation">
                     <li><a href="#hero" class="nav-link">Home</a></li>
