--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <header>
-            <img src="https://imgur.com/K0TNXwa" class="profile-img">
+            <img src="https://i.imgur.com/eX94P7f.png" class="profile-img">
             <nav>
                 <ul class="navigation">
                     <li><a href="#hero" class="nav-link">Home</a></li>
@@ -24,7 +24,7 @@
         <main>
             <section id="hero">
                 <div class="section-inner">
-                    <img src="https://imgur.com/ef511eb4-61c5-4372-af63-531cdfcdc9fc" class="profile-img">
+                    <img src="https://i.imgur.com/K0TNXwa.png" class="profile-img">
                     <h1>Tavis Chen</h1>
                 </div>
             </section>
