--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <main>
             <section id="hero">
                 <div class="section-inner">
-                    <img src="https://i.imgur.com/K0TNXwa.png" class="profile-img">
-                    <h1>Tavis Chen</h1>
+                 <img src="https://i.imgur.com/usBDue4.png" class="card">
+                 <h1>Tavis Chen</h1>
                 </div>
+
             </section>
             <section id="about">
                 <div class="section-inner">
