--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="main.css">
         <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     </head>
+<div id="wrapper">
     <body>
         <header>
             <img src="https://i.imgur.com/eX94P7f.png" class="profile-img">
@@ -21,8 +22,9 @@
         <main>
             <section id="hero">
                 <div class="section-inner">
-                 <img src="https://i.imgur.com/usBDue4.png" class="card">
-                 <h1>Tavis Chen</h1>
+                <img src="https://i.imgur.com/Fl4PQLB.png" class="card">
+                <div data-aos="fade-up"></div>
+                <h1>Tavis Chen</h1>
                 </div>
 
             </section>
@@ -37,28 +39,25 @@
                     <div class="container">
                         <div class="projects-container">
                             <div class="project-container project-card">
-                                <img src="https://i.imgur.com/R8pauAu.jpg" alt="valley" loading="lazy" class="project-pic"/>
+                                <a href="https://vcg.berkeley.edu/" style="text-decoration:none"> <img src="https://i.imgur.com/R8pauAu.jpg" alt="valley" loading="lazy" class="project-pic"/></a>
                                     <h3 class="project-title">Valley Consulting Group</h3>
                                         <p class="project-details">
                                            Strategy consulting. Past clients include Walmart and scholarHub.
                                         </p>
-                                        <a href="https://vcg.berkeley.edu/" target="_blank" class="project-link">Check it Out</a>
                                     </div>
                             <div class="project-container project-card">
-                                <img src="https://design-nano.berkeley.edu/images/hkt_research_image_12.jpg" alt="polygence" loading="lazy"class="project-pic"/>
+                                <a href="https://design-nano.berkeley.edu/index.php"" style="text-decoration:none"> <img src="https://design-nano.berkeley.edu/images/hkt_research_image_12.jpg" alt="polygence" loading="lazy"class="project-pic"/></a>
                                     <h3 class="project-title">Design for Nanomanufacturing</h3>
                                          <p class="project-details">
                                             Computed-axial-lithography using ROMP polymers.
                                         </p>
-                                    <a href="https://design-nano.berkeley.edu/index.php" target="_blank" class="project-link">Check it Out</a>
                                 </div>
                              <div class="project-container project-card">
-                                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Seal_of_the_California_Institute_of_Technology.svg/1200px-Seal_of_the_California_Institute_of_Technology.svg.png" alt="caltech" loading="lazy" class="project-pic"/>
+                                <a href="https://www.stoltz.caltech.edu/" style="text-decoration:none"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Seal_of_the_California_Institute_of_Technology.svg/1200px-Seal_of_the_California_Institute_of_Technology.svg.png" alt="caltech" loading="lazy" class="project-pic"/></a>
                                     <h3 class="project-title">Caltech <br>(Stoltz Group)</h3>
                                         <p class="project-details">
                                            Developing novel organic synthesis pathways.
                                         </p>
-                                        <a href="https://www.stoltz.caltech.edu/" target="_blank" class="project-link">Check it Out</a>
                                     </div>
                                 </div>
                             </div>
@@ -66,20 +65,18 @@
                                 <div class="container">
                                     <div class="projects-container">
                                         <div class="project-container project-card">
-                                            <img src="https://upload.wikimedia.org/wikipedia/en/9/92/AlphaChiSigmaCoatOfArms.png" alt="axs" loading="lazy" class="project-pic"/>
+                                            <a href="https://axs.berkeley.edu/" style="text-decoration:none"><img src="https://upload.wikimedia.org/wikipedia/en/9/92/AlphaChiSigmaCoatOfArms.png" alt="axs" loading="lazy" class="project-pic"/></a>
                                                 <h3 class="project-title">Alpha Chi Sigma</h3>
                                                     <p class="project-details">
                                                        Professional co-ed chemistry fraternity.
                                                     </p>
-                                                    <a href="https://axs.berkeley.edu/" target="_blank" class="project-link">Check it Out</a>
                                                 </div>
                             <div class="project-container project-card">
-                                <img src="https://i.imgur.com/ShzZWC3.png" alt="polygence" loading="lazy"class="project-pic"/>
+                                <a href="https://ysjournal.com/bifunctional-molecules-a-possible-strategy-for-treating-hepatitis-c-viral-infection/" style="text-decoration:none"><img src="https://i.imgur.com/ShzZWC3.png" alt="polygence" loading="lazy"class="project-pic"/></a>
                                     <h3 class="project-title">Polygence Research Mentorship</h3>
                                         <p class="project-details">
                                             Bifunctional molecule approach to hepatitis c virus treatment.
                                         </p>
-                                    <a href="https://ysjournal.com/bifunctional-molecules-a-possible-strategy-for-treating-hepatitis-c-viral-infection/" target="_blank" class="project-link">Check it Out</a>
                                 </div>
                             </div>
                          </div>        
@@ -95,4 +92,5 @@
             </section>
         </main>
     </body>
+</div>
 </html>
