--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                         </p>
                                     </div>
                             <div class="project-container project-card">
-                                <a href="https://design-nano.berkeley.edu/index.php"" style="text-decoration:none"> <img src="https://design-nano.berkeley.edu/images/hkt_research_image_12.jpg" alt="polygence" loading="lazy"class="project-pic"/></a>
+                                <a href="https://design-nano.berkeley.edu/index.php"" style="text-decoration:none"> <img src="https://www.ocf.berkeley.edu/~hayden/images/hkt_research_image_12.jpg" alt="dfn" loading="lazy"class="project-pic"/></a>
                                     <h3 class="project-title">Design for Nanomanufacturing</h3>
                                          <p class="project-details">
                                             Computed-axial-lithography using ROMP polymers.
